--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     <script src="static/save_tariff.js"></script>
     <script src="static/tariff_type_tabs.js"></script>
     <script src="static/delete_tariff.js"></script>
-    <script src="static/down_sample_check_list.js"></script>
+    <script src="static/check_list.js"></script>
 
 
   <style>
@@ -247,7 +247,10 @@
          border-bottom: 0 !important;
       }
 
-      .down_sample_option { height: 15px;}
+      .menu_check_list {
+        height: 15px;
+        width: 20%;
+      }
 
   </style>
 
@@ -285,17 +288,81 @@
           <li><div>Projects</div></li>
           <li><div>Load</div>
               <ul class="sub_menu">
+                   <li><div>Maximum Allowed Missing Data (%)</div>
+                      <ul class="sub_menu">
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" checked value="0"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">0%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.01"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">1%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.02"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">2%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.05"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">5%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.1"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">10%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.2"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">20%</div>
+                          </li>
+                          <li>
+                              <input class="missing_data_limit menu_check_list" type="checkbox" value="0.3"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">30%</div>
+                          </li>
+                      </ul>
+                  </li>
                   <li><div>Down-sample Users (Random Selection)</div>
                       <ul class="sub_menu" id="down_sample_options">
                           <li>
-                              <input class="down_sample_option" type="checkbox" checked value="1" style="width: 20%;"
+                              <input class="down_sample_option menu_check_list" type="checkbox" checked value="1"
                               onclick="update_check_list(event, this)">
                               <div style="width: 80%;">100% (full data)</div>
                           </li>
                           <li>
-                              <input class="down_sample_option" type="checkbox" value="0.5" style="width: 20%;"
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.5"
                               onclick="update_check_list(event, this)">
                               <div style="width: 80%;">50%</div>
+                          </li>
+                          <li>
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.2"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">20%</div>
+                          </li>
+                          <li>
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.1"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">10%</div>
+                          </li>
+                          <li>
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.05"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">5%</div>
+                          </li>
+                          <li>
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.05"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">2%</div>
+                          </li>
+                          <li>
+                              <input class="down_sample_option menu_check_list" type="checkbox" value="0.01"
+                              onclick="update_check_list(event, this)">
+                              <div style="width: 80%;">1%</div>
                           </li>
                       </ul>
                   </li>
