--- a/static/frozen_from_web/dropdown_menu.css
+++ b/static/frozen_from_web/dropdown_menu.css
@@ -8,26 +8,20 @@ p                                   { margin: 15px 0; }
 */
 ul.dropdown                         { position: relative; margin: 0; height: 20px; padding: 0px 10px 0px 10px;}
 ul.dropdown li                      { font-weight: bold; float: left; zoom: 1; background: inherit; padding: 4px 8px;
-                                      border-right: 1px solid #333; color: #222; font-size: 11px}
-ul.dropdown a:hover		            { color: #000; }
-ul.dropdown a:active                { color: #ffa500; }
-ul.dropdown li a                    { display: block; padding: 4px 8px; border-right: 1px solid #333;
-	 								  color: #222; }
-ul.dropdown li:last-child a         { border-right: none; } /* Doesn't work in IE */
-ul.dropdown li.hover,
-ul.dropdown li:hover                { background: #F3D673; color: black; position: relative; }
-ul.dropdown li.hover a              { color: black; }
+                                      color: #222; font-size: 11px}
+ul.dropdown li:hover                { background: #ddd; color: black; position: relative; }
 
 
 /* 
 	LEVEL TWO
 */
-ul.dropdown ul 						{ width: 220px; display: none; position: absolute; top: 100%; left: 0; }
-ul.dropdown ul li 					{ font-weight: normal; background: #f6f6f6; color: #000; 
-									  border-bottom: 1px solid #ccc; float: none; }
+ul.dropdown ul 						{ width: 220px; display: none; position: absolute; top: 100%; left: 0;
+                                      border: 1px solid #ccc;}
+ul.dropdown ul li 					{ font-weight: normal; background: #EEEEEE; color: #000;
+									  float: none; z-index: 99}
 									  
                                     /* IE 6 & 7 Needs Inline Block */
-ul.dropdown ul li a					{ border-right: none; width: 100%; display: inline-block; } 
+ul.dropdown ul li a					{ border-right: none; width: 100%; display: inline-block; }
 
 /* 
 	LEVEL THREE
