--- a/templates/index.html
+++ b/templates/index.html
@@ -66,13 +66,14 @@
       }
 
       button {
-        height: 2.25vh;
+        height: 3.25vh;
         background-color: inherit;
         float: left;
         border-style: solid;
         border-width: 1px;
         margin: 0;
         font-size: 1.25vh;
+        padding: 1vh;
       }
 
       button:hover {
@@ -87,6 +88,7 @@
       }
 
       .label_stacked {
+        height: 2.25vh;
         margin-bottom: 2vh;
         width: 100%;
       }
@@ -284,12 +286,22 @@
 <div id="container">
   <div id="menu_bar" style="height: 20px;">
       <ul id="tariff_menu" class="dropdown">
-          <li><div>Projects</div></li>
+          <li><div>Project</div>
+              <ul>
+                  <li>Load Project</li>
+                  <li>Save Project</li>
+                  <li>Save Project As</li>
+                  <li>Delete Project</li>
+                  <hr>
+                  <li>Restart Tool</li>
+              </ul>
+          </li>
           <li><div>Load</div>
               <ul class="sub_menu">
-                  <li>
-                      <div onclick="import_data()">Import Data</div>
-                  </li>
+                  <li><div onclick="import_data()">Import Load Data</div></li>
+                  <li><div>Delete Load Data</div></li>
+                  <li><div>Restore Original Load Data</div></li>
+                  <hr>
                   <li><div>Maximum Allowed Missing Data (%)</div>
                       <ul class="sub_menu">
                           <li>
@@ -368,18 +380,29 @@
                           </li>
                       </ul>
                   </li>
+                  <hr>
+                  <li><div>Network Load</div></li>
               </ul>
           </li>
 
-          <li><div>Tariffs</div>
+          <li>
+              <div>Tariff</div>
               <ul class="sub_menu">
-                  <li><div>Network Sets</div>
+                  <li><div>Create New Tariff</div></li>
+                  <li><div>Tariff Info</div></li>
+                  <li><div>Reset Network Tariffs</div>
                       <ul class="sub_menu" id="network_tariff_sets"></ul>
                   </li>
-                  <li><div>Retail Sets</div>
+                  <li><div>Reset Retail Tariffs</div>
                       <ul class="sub_menu" id="retail_tariff_sets"></ul>
                   </li>
-                  <li><div>Update</div></li>
+                  <li><div>Update Tariffs</div></li>
+              </ul>
+          </li>
+          <li>
+              <div>Export</div>
+              <ul>
+                  <li><div>Export Results</div></li>
               </ul>
           </li>
       </ul>
@@ -406,7 +429,7 @@
             <div style="padding: 1%; width: 100%; height: 95%; border-width: 2px; box-sizing: border-box;
                         border-style: solid; border-color: #EEEEEE;">
                 <div id="load_selection" class="row" style="height: 55%;">
-                    <div class="col" style="width: 50%;">
+                    <div class="col" style="width: 35%;">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Select Load</h4>
                             <hr style="width: 80%; float: left;">
@@ -429,10 +452,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col" style="width: 50%;">
+                    <div class="col" style="width: 65%;">
                         <div class="row" style="height: 10%">
                             <h4 style="margin: 0;">Demographic Filters</h4>
-                            <hr style="width: 80%; float: left;">
+                            <hr style="width: 100%; float: left;">
                         </div>
                         <div id="demograhphic_selection" class="row" style="height: 100%">
                             <div id="demo_label_col" class="col" style="width: 75%;">
@@ -492,8 +515,8 @@
                         </div>
                     </div>
                 </div>
-                <hr>
-                <div id="load_inspection" style="height: 45%">
+                <div style="height: 2%"><hr></div>
+                <div id="load_inspection" style="height: 40%">
                     <div style="height: 10%; overflow: hidden;">
                         <div id="sample_size_info" style="float: left; width: 60%; height: 100%;">
                             No. of users: N/A
@@ -667,9 +690,9 @@
         </div>
         <div id="tariff_selection_panel" class="main_tab_content">
             <div id="tariff_type_tabs" class="tab_button_area" style="height: 5%">
-                <button class="tariff_type_links" value="DUOS"
+                <button class="tariff_type_links"
                         onclick="displayTariffType(event, 'network_tariff_selection_panel')">Network tariffs</button>
-                <button id="default_tariff_type_tab" class="tariff_type_links" value="NUOS"
+                <button id="default_tariff_type_tab" class="tariff_type_links"
                         onclick="displayTariffType(event, 'retail_tariff_selection_panel')">Retail tariffs</button>
             </div>
             <div id="tariff_type_container" style="height: 95%; width: 100%; overflow: hidden;">
@@ -689,7 +712,7 @@
                     </div>
                     <div class="lower_tariff_section row" style="height: 55%;">
                         <script src="static/tariff_tabs.js"></script>
-                        <div id="tariff_tabs" class="tab_button_area" style="height: 5%">
+                        <div id="tariff_tabs" class="tab_button_area" style="height: 10%">
                             <button class="tablinks" value="DUOS"
                                     onclick="displayTariff(event, 'network_tariff_selection_panel', 'DUOS')">DUOS</button>
                             <button class="tablinks" value="TUOS"
@@ -699,7 +722,7 @@
                             <button id="network_default_tab" class="tablinks" value="NUOS"
                                     onclick="displayTariff(event, 'network_tariff_selection_panel', 'NUOS')">NUOS</button>
                         </div>
-                        <div style="height: 95%; width: 100%; overflow: hidden;">
+                        <div style="height: 90%; width: 100%; overflow: hidden;">
                             <div id="DUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                             <div id="TUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                             <div id="DTUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
@@ -722,13 +745,13 @@
                              });</script>
                     <div class="lower_tariff_section row" style="height: 55%;">
                         <script src="static/tariff_tabs.js"></script>
-                        <div class="tariff_tabs tab_button_area" style="height: 5%">
+                        <div class="tariff_tabs tab_button_area" style="height: 10%">
                             <button id="retail_default_tab" class="tablinks" value="Retail"
                                     onclick="displayTariff(event, 'retail_tariff_selection_panel', 'Retail')">
                                 Retail
                             </button>
                         </div>
-                        <div style="height: 95%; width: 100%; overflow: hidden; ">
+                        <div style="height: 90%; width: 100%; overflow: hidden; ">
                             <div id="Retail" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
                         <script>document.getElementById("retail_default_tab").click();</script>
