--- a/templates/index.html
+++ b/templates/index.html
@@ -275,7 +275,8 @@
                 onclick="delete_case(this)">&times;</button>
     </div>
 
-    <table class="tariff_table display nowrap" style="width: 100%; display: none; border-bottom: 0 !important;">
+    <table class="tariff_table display nowrap"
+           style="width: 100%; display: none; border-bottom: 0 !important; margin-bottom: 2%">
         <thead class="tariff_table_header"></thead>
         <tbody class="tariff_table_body"></tbody>
     </table>
