--- a/templates/index.html
+++ b/templates/index.html
@@ -276,7 +276,7 @@
     </div>
 
     <table class="tariff_table display nowrap"
-           style="width: 100%; display: none; border-bottom: 0 !important; margin-bottom: 2%">
+           style="width: 100%; display: none; border-bottom: 0 !important;">
         <thead class="tariff_table_header"></thead>
         <tbody class="tariff_table_body"></tbody>
     </table>
