style for add and delete row buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,14 +66,14 @@
       }
 
       button {
-        height: 3.25vh;
+        height: 2.25vh;
         background-color: inherit;
         float: left;
         border-style: solid;
         border-width: 1px;
         margin: 0;
         font-size: 1.25vh;
-        padding: 1vh;
+        padding: 0.25vh;
       }
 
       button:hover {
@@ -150,6 +150,7 @@
         border-style: solid;
         border-width: 1px;
         height: 100%;
+        padding: 1vh;
       }
 
       .tab_button_area button:hover {
@@ -272,7 +273,7 @@
         <button class='case_info_button' style="float: left; width: 10%;"
                 onclick="reset_case_tariff_info_from_button(this)">?</button>
         <button class='case_delete_button' style="float: left; width: 10%;"
-                onclick="delete_case(this)">&times;</button>
+                onclick="delete_case(this)">&#10006</button>
     </div>
 
     <table class="tariff_table display nowrap"
