--- a/templates/tariff_selectors.html
+++ b/templates/tariff_selectors.html
@@ -62,11 +62,11 @@
         <hr style="width: 80%; float: left;">
     </div>
     <div class="row" style="height: 40%">
-        <button style="width: 60%; text-align: left;"
+        <button style="width: 60%; text-align: left; height: 3.25vh;"
                 onclick="get_default_case_name(event, this)">Apply tariff to load and create case</button>
-        <button style="width: 60%; text-align: left;"
+        <button style="width: 60%; text-align: left; height: 3.25vh;"
                 onclick="delete_tariff(event, this)">Delete from active database</button>
-        <button class="save_mod_button" style="width: 60%; text-align: left;"
+        <button class="save_mod_button" style="width: 60%; text-align: left; height: 3.25vh;"
                     onclick="get_tariff_then_save(event, this)">Save new version of tariff</button>
         <input class="save_mod_tariff_name row" style="width: 59%;">
     </div>
