--- a/templates/index.html
+++ b/templates/index.html
@@ -278,12 +278,7 @@
 
     <div id="choose_component_type" title="Choose component type" style="display: none">
         <p>Please select the component type to add:</p>
-        <select>
-            <option>Daily</option>
-            <option>Energy Flat</option>
-            <option>Energy TOU</option>
-            <option>Demand</option>
-        </select>
+        <select></select>
     </div>
 
     <div id="case_namer" title="Basic dialog" style="display: none">
@@ -756,6 +751,9 @@
                             <div id="DTUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                             <div id="NUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
+                        <div class="component_adder" style='width: 100%; height: 10%; display: none;'>
+                            <button onclick="get_component_type('network_tariff_selection_panel')">&#10010; Add component</button>
+                        </div>
                         <script>document.getElementById("network_default_tab").click();</script>
                     </div>
                 </div>
@@ -779,8 +777,11 @@
                                 Retail
                             </button>
                         </div>
-                        <div style="height: 90%; width: 100%; overflow: hidden; ">
+                        <div style="height: 80%; width: 100%; overflow: hidden; ">
                             <div id="Retail" class="tabcontent table_set" style="overflow-y: scroll"></div>
+                        </div>
+                        <div class="component_adder" style='width: 100%; height: 10%; display: none;'>
+                            <button onclick="get_component_type('retail_tariff_selection_panel')">&#10010; Add component</button>
                         </div>
                         <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
