--- a/templates/index.html
+++ b/templates/index.html
@@ -766,9 +766,12 @@
                             <div id="DTUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                             <div id="NUOS" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
-                        <div class="component_adder" style='width: 100%; height: 10%; display: none;'>
-                            <button onclick="get_component_type('network_tariff_selection_panel')">&#10010; Add component</button>
-                        </div>
+                        <button class="component_adder" style='display: none; margin: 1%;'
+                                onclick="get_component_type('network_tariff_selection_panel')">&#10010; Add component
+                        </button>
+                        <button class="calculate_nuos" style='margin: 1%;'
+                                onclick="nuos_equals_duos_plus_tuos()">NUOS = DUOS + TUOS
+                        </button>
                         <script>document.getElementById("network_default_tab").click();</script>
                     </div>
                 </div>
@@ -795,9 +798,11 @@
                         <div style="height: 80%; width: 100%; overflow: hidden; ">
                             <div id="Retail" class="tabcontent table_set" style="overflow-y: scroll"></div>
                         </div>
-                        <div class="component_adder" style='width: 100%; height: 10%; display: none;'>
-                            <button onclick="get_component_type('retail_tariff_selection_panel')">&#10010; Add component</button>
-                        </div>
+
+                        <button class="component_adder" style='display: none; margin: 1%;'
+                                onclick="get_component_type('retail_tariff_selection_panel')">&#10010; Add component
+                        </button>
+
                         <script>document.getElementById("retail_default_tab").click();</script>
                     </div>
                 </div>
