--- a/templates/index.html
+++ b/templates/index.html
@@ -184,6 +184,14 @@
         height: 7.5%;
       }
 
+      #info_tariff_summary {
+        height: 25%;
+      }
+
+      #info{
+        height: 75%;
+      }
+
       @media screen and (min-height: 620px) {
           .results_area {
             width: 100%;
@@ -219,6 +227,14 @@
 
           #case_tabs{
             height: 10%;
+          }
+
+          #info_tariff_summary {
+            height: 50%;
+          }
+
+          #info {
+            height: 50%;
           }
 
       }
@@ -848,7 +864,7 @@
                         </div>
                     </div>
                     <div class="case_info_tab_content" id="tariff_info">
-                        <div id="info_tariff_summary" class="row" style="height: 25%;">
+                        <div id="info_tariff_summary" class="row">
                             <div id="info_tariff_summary_labels" class="col" style="width: 100%; display: none;">
                                 <div class="row" style="height: 2.5vh;">
                                     <div class="label_line">Case:&nbsp</div>
@@ -872,7 +888,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="info" style="width:100%; height:70%; overflow-x: scroll; overflow-y: scroll"></div>
+                        <div id="info" style="width:100%; overflow-x: scroll; overflow-y: scroll"></div>
                     </div>
                     <div class="case_info_tab_content" id="demog_info"></div>
                 </div>
